Thu Feb 19 16:51:13 1998  Doug Evans  <devans@canuck.cygnus.com>

	* m32r-opc.[ch]: Regenerate.

start-sanitize-sky
Thu Feb 19 02:11:39 1998  Doug Evans  <devans@charmed.cygnus.com>

	* dvp-opc.c (dma_operands): Rewrite.
	(dma_operand_{count,addr}): New globals.
	(dma_opcodes): Rewrite.  Add "dmaend" with no operands.
	(insert_dma_addr): Insert value into insn.
	(extract_dma_addr): Extract value from insn.

Wed Feb 18 15:46:46 1998  Doug Evans  <devans@canuck.cygnus.com>

	* dvp-dis.c (print_vu): Handle loi insns.
	(print_insn): Likewise.
	* dvp-opc.c (vu_lower_opcodes): Add "loi".
	(vu_operands): Make LDEST1 a FAKE operand.
	(parse_dest1): Allow elided argument.
	(print_dest1): Don't print the argument.

Tue Feb 17 18:48:25 1998  Doug Evans  <devans@canuck.cygnus.com>

	* dvp-opc.c (parse_vfreg): Dest spec is optional.
	(print_vfreg): Don't print dest spec.
	(parse_accdest): Dest spec is optional.
	(print_accdest): Don't print dest spec.

end-sanitize-sky
Tue Feb 17 17:14:50 1998  Doug Evans  <devans@seba.cygnus.com>

	* Makefile.am (CGENFILES): Update.
	* Makefile.in: Regenerate.
	* cgen-asm.in (insert_normal): Result is error message now.
	Validate value to be inserted.
	(insert_insn_normal): Result is error message now.
	(@arch@_cgen_assemble_insn): Update.
	* cgen-asm.c (cgen_parse_{signed,unsigned}_integer): Delete min,max
	arguments.  Don't perform validation here.
	* m32r-asm.c,m32r-dis.c,m32r-opc.c: Regenerate.

Fri Feb 13 14:26:06 1998  Doug Evans  <devans@canuck.cygnus.com>

	* cgen-opc.in (@arch@_cgen_get_insn_operands): Handle empty
	operand instance list.
	* m32r-opc.c: Regenerate.

Fri Feb 13 14:53:02 1998  Ian Lance Taylor  <ian@cygnus.com>

	* Makefile.am (AUTOMAKE_OPTIONS): Define.
	* configure, Makefile.in, aclocal.m4: Rebuild with automake 1.2e.

Fri Feb 13 10:21:09 1998  Mark Alexander  <marka@cygnus.com>

	* m10300-dis.c (print_insn_mn10300): Recognize break instruction.

Fri Feb 13 13:12:14 1998  Ian Lance Taylor  <ian@cygnus.com>
